[package]
name = "analysis-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.29.1"
anyhow = {version="1.0.70", features=["backtrace"]}

indicatif = { version="0.17.3", features=["rayon"]}

rayon = "1.7.0"

serde = "1.0.160"
serde_json = "1.0.96"
ciborium = "0.2.0"