[package]
name = "analysis-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "ascc"
]

[lib]
name="va"
src="src/lib.rs"

[profile.dev]
opt-level = 3

[dependencies]

polars = {version="0.28.0", features=["parquet", "dtype-decimal"]}

