[package]
name = "asc-tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "ascc"
src = "src/lib.rs"

crate-type = ["rlib", "cdylib"]

[profile.dev]
opt-level = 3

[dependencies]
rust_decimal = { version = "1.29.1", features = ["serde-float"] }
chrono = { version = "0.4.24", features = ["serde"] }
anyhow = { version = "1.0.70", features = ["backtrace"] }

indicatif = { version = "0.17.3", features = ["rayon"] }

rayon = "1.7.0"
itertools = "0.10.5"
atomic_float = "0.1.0"

serde = "1.0.160"
serde_json = "1.0.96"
ciborium = "0.2.0"
rkyv = "0.7.42"

clap = { version = "4.2.2", features = ["derive"] }

pyo3 = { version = "0.19.0", features = ["extension-module", "anyhow"], optional = true }
polars = { version = "0.30.0", features = ["parquet", "dtype-decimal"], optional = true }
arrow2 = { version = "0.17.0", optional = true }

egui = { version = "0.22.0", optional = true }
egui_extras = { version = "0.22.0", optional = true }
egui_file = { version = "0.9", optional = true }
egui_dock = { version = "0.6.2", optional = true }
eframe = { version = "0.22.0", optional = true }

[features]
default = ["gui"]
py-ext = ["dep:pyo3"]
dataframes = ["dep:polars", "dep:arrow2"]
gui = ["dep:egui", "dep:eframe", "dep:egui_file", "dep:egui_extras", "dep:egui_dock"]

[[example]]
name = "export"
required-features = ["dataframes"]